objects/SFSSDupeCatcher__Potential_Duplicate__c.object
<CustomObject>
    <fields>
        <fullName>SFSSDupeCatcher__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Account record associated with this potential duplicate record.</description>
        <inlineHelpText>The Account record associated with this potential duplicate record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Contact_Display__c</fullName>
        <description>A link to the Contact record associated with this potential duplicate record.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Contact__c, SFSSDupeCatcher__Contact__r.FirstName &amp; IF(SFSSDupeCatcher__Contact__r.FirstName &lt;&gt; &apos;&apos;, &apos; &apos;, &apos;&apos; ) &amp; SFSSDupeCatcher__Contact__r.LastName, &apos;_self&apos;) &amp; IF( AND( SFSSDupeCatcher__Contact__r.AccountId &lt;&gt; &apos;&apos;, NOT( ISNULL( SFSSDupeCatcher__Contact__r.AccountId ) ) ), &apos; at &apos; &amp; HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Contact__r.AccountId, SFSSDupeCatcher__Contact__r.Account.Name, &apos;_self&apos; ), &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the Contact record associated with this potential duplicate record.</inlineHelpText>
        <label>Contact Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Contact record associated with this potential duplicate record.</description>
        <inlineHelpText>The Contact record associated with this potential duplicate record.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Criteria__c</fullName>
        <defaultValue>&quot;null&quot;</defaultValue>
        <description>Values used to match potential duplicates</description>
        <label>Criteria</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Duplicate_Warning__c</fullName>
        <description>A link to the Duplicate Alert record that is the parent of this record</description>
        <inlineHelpText>A link to the Duplicate Alert record that is the parent of this record</inlineHelpText>
        <label>Duplicate Alert</label>
        <referenceTo>SFSSDupeCatcher__Duplicate_Warning__c</referenceTo>
        <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Email__c</fullName>
        <description>The email address of the duplicate lead/contact/account.</description>
        <formula>CASE( SFSSDupeCatcher__Object_Type__c, &apos;Contact&apos;, SFSSDupeCatcher__Contact__r.Email, &apos;Lead&apos;, SFSSDupeCatcher__Lead__r.Email, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The email address of the duplicate lead/contact/account.</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Lead_Display__c</fullName>
        <description>The Lead record associated with this potential duplicate record.</description>
        <formula>HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Lead__c, SFSSDupeCatcher__Lead__r.FirstName &amp; IF(SFSSDupeCatcher__Lead__r.FirstName &lt;&gt; &apos;&apos;, &apos; &apos;, &apos;&apos; ) &amp; SFSSDupeCatcher__Lead__r.LastName &amp; IF( SFSSDupeCatcher__Lead__r.Company &lt;&gt; &apos;&apos;, &apos; at &apos; &amp; SFSSDupeCatcher__Lead__r.Company, &apos;&apos; ), &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Lead record associated with this potential duplicate record.</inlineHelpText>
        <label>Lead Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Lead record associated with this potential duplicate record.</description>
        <inlineHelpText>The Lead record associated with this potential duplicate record.</inlineHelpText>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Object_Type__c</fullName>
        <description>Indicator as to whether the duplicate was lead, contact or account.</description>
        <formula>IF( AND( NOT( ISNULL( SFSSDupeCatcher__Account__c ) ), SFSSDupeCatcher__Account__c &lt;&gt; &apos;&apos; ), &apos;Account&apos;, IF( AND( NOT( ISNULL( SFSSDupeCatcher__Contact__c ) ), SFSSDupeCatcher__Contact__c &lt;&gt; &apos;&apos; ), &apos;Contact&apos;, IF( AND( NOT( ISNULL( SFSSDupeCatcher__Lead__c ) ), SFSSDupeCatcher__Lead__c &lt;&gt; &apos;&apos; ), &apos;Lead&apos;, &apos;&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicator as to whether the duplicate is a lead, contact or account.</inlineHelpText>
        <label>Duplicate Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Phone__c</fullName>
        <description>The phone number of the duplicate lead/contact/account.</description>
        <formula>CASE( SFSSDupeCatcher__Object_Type__c, &apos;Account&apos;, SFSSDupeCatcher__Account__r.Phone, &apos;Contact&apos;, SFSSDupeCatcher__Contact__r.Phone, &apos;Lead&apos;, SFSSDupeCatcher__Lead__r.Phone, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The phone number of the duplicate lead/contact/account.</inlineHelpText>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario_Type__c</fullName>
        <description>The type of records triggered the potential duplicate (e.g. Lead, Account, Lead to Contact, etc.) .   

This value always matches the Filter Type of the parent filter.</description>
        <inlineHelpText>The type of records triggered the potential duplicate (e.g. Lead, Account, Lead to Contact, etc.) .   

This value always matches the Filter Type of the parent filter.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Scenario__c</fullName>
        <description>A link to the parent filter that triggered the potential duplicate.</description>
        <inlineHelpText>A link to the parent filter that triggered the potential duplicate.</inlineHelpText>
        <label>Filter</label>
        <referenceTo>SFSSDupeCatcher__Scenario__c</referenceTo>
        <relationshipLabel>DupeCatcher Potential Duplicates</relationshipLabel>
        <relationshipName>Potential_Duplicates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Warning_Display__c</fullName>
        <description>A link to the duplicate contact/account/lead record associated with this potential duplicate record.</description>
        <formula>CASE( SFSSDupeCatcher__Object_Type__c, &apos;Account&apos;, HYPERLINK( &apos;/&apos; &amp; SFSSDupeCatcher__Account__c, IF( SFSSDupeCatcher__Duplicate_Warning__r.SFSSDupeCatcher__Scenario__r.SFSSDupeCatcher__Person_Account_Filter__c, SFSSDupeCatcher__Account__r.Id, SFSSDupeCatcher__Account__r.Name), &apos;_self&apos; ), &apos;Contact&apos;, SFSSDupeCatcher__Contact_Display__c , &apos;Lead&apos;, SFSSDupeCatcher__Lead_Display__c, &apos;&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A link to the duplicate contact/account/lead record associated with this potential duplicate record.</inlineHelpText>
        <label>Duplicate Record</label>
        <type>Text</type>
    </fields>
    <label>DupeCatcher Potential Duplicate</label>
    <nameField>
        <displayFormat>Dupe-{0}</displayFormat>
        <label>Duplicate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeCatcher Potential Duplicates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>